--- a/gcal/deadlines.html
+++ b/gcal/deadlines.html
@@ -1,7 +1,7 @@
 <h1 id="deadlines">deadlines <span id="top"></span></h1>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p>this file is generated automatically, do not make manual changes to it!</p>
-<p>2020-10-18 <a href="#7c78ebb4c2">IM</a><br />
+<p>2020-10-18 <a href="#bf1f3f9270"><strong>IM t.ly#eiOD</strong></a><br />
 2020-10-19 <a href="#2c45613738">IoTDI.IoT.design.and.implement</a><br />
 2020-10-19 <a href="#2528534e69">EAI.MTYMEX.SmartTech(springer)</a><br />
 2020-10-22 <a href="#98b71f155d">EAI.vnets</a><br />
@@ -47,183 +47,7 @@
 2021-02-28 <a href="#9582ef3fcf">jour.mdpi.vehicularfleets</a><br />
 2021-03-15 <a href="#95596e2fac">KSEM.knowledge</a><br />
 2021-03-31 <a href="#a9927a6859">(J)IEEE.Sensors.indoor.positioning</a></p>
-<h2 id="im-2020-10-18-top">IM (2020-10-18) <span id="7c78ebb4c2"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>IFIP/IEEE International Symposium on Integrated Network Management (IM 2021)<br />
-17-21 May , 2021, Bordeaux, France</p>
-<p><a href="http://im2021.ieee-im.org">http://im2021.ieee-im.org</a><br />
-Direct link for submissions: <a href="https://submissoes.sbc.org.br/home.cgi?c=3614">https://submissoes.sbc.org.br/home.cgi?c=3614</a></p>
-<p>============================== Important dates =================================<br />
-Technical paper submission deadline (short and long papers): October 18, 2020 (Firm)<br />
-Notification of Acceptance: December 10, 2020</p>
-<p>=============================== Overview ======================================<br />
-Call for Papers</p>
-<p>The 17th IFIP/IEEE Symposium on Integrated Network and Service Management (IM<br />
-2021) will be held on May 17-21, 2021, in Bordeaux, France. Held in odd-numbered<br />
-years since 1989, IM 2021 follows the 33 years tradition of NOMS and IM as the<br />
-primary IEEE Communications Societyís forum for technical exchange on management<br />
-of information and communication technology focusing on research, development,<br />
-integration, standards, service provisioning, and user communities. IM 2021 will<br />
-focus on the theme of “Intelligent Management of Open and Highly Programmable<br />
-Networks”.</p>
-<p>It aims to capture recent results, emerging approaches and technical<br />
-solutions for dealing with resilience and sustainability of network and service<br />
-management in highly dynamic environments. Furthermore, the sudden and important<br />
-uptake of work-from-home and the promise of the post-digital era are rising new<br />
-challenges and exacerbating the dynamic nature of the communication<br />
-infrastructure, pushing additional requirements on networks in terms of quality,<br />
-resilience and sustainability. This is also accelerating the adoption of<br />
-Artificial Intelligence advances along with the openness and programmability of<br />
-network infrastructures, to make these more flexible and adaptive. In addition<br />
-to this theme, IM 2021 will cover a wide range of topics of interest within the<br />
-field in integrated network and service management.</p>
-<p>IM 2021 will offer five types of sessions: technical, experience, poster, panel<br />
-and dissertation. High quality will be assured through a well-qualified<br />
-Technical Program Committee and stringent peer review of paper submissions. A<br />
-special call for demonstrations is organized to allow industry partners and<br />
-researchers to demonstrate early products and prototypes.</p>
-<p>========================= Submission Instructions ==============================</p>
-<p>Authors are invited to submit original contributions written in English<br />
-that have not been published or submitted for publication elsewhere.<br />
-Technical papers must be formatted using the IEEE 2-column format and<br />
-not exceed 8 pages (excluding references) for full paper submissions or<br />
-not exceed 4 pages (excluding references) for poster/short paper<br />
-submissions. All papers should be submitted through the JEMS conference<br />
-submission system.</p>
-<p>All submitted papers will be peer-reviewed. Accepted and presented<br />
-papers will be published in the conference proceedings and submitted<br />
-to IEEE Xplore.</p>
-<p>============================== Topics of interest ==============================<br />
-Authors are invited to submit papers that fall into or are related to the topic<br />
-areas that are listed below. In addition, we invite submissions of proposals for<br />
-demonstrations, exhibits, technical panels, tutorials and workshops, as well as<br />
-experience session papers and dissertation papers</p>
-<h2 id="management-and-control-of-networks">Management and Control of Networks</h2>
-<ul>
-<li>Enterprise and Campus Networks<br />
-</li>
-<li>Data Center Networks<br />
-</li>
-<li>Industrial Networks and TSN<br />
-</li>
-<li>Cyber Physical Systems<br />
-</li>
-<li>IP Networks<br />
-</li>
-<li>5G/6G,<br />
-</li>
-<li>Wireless &amp; Mobile Networks, including optical, overlay, access, SCADA, IoT, VANET, etc.</li>
-</ul>
-<h2 id="programmable-networks-and-automation">Programmable Networks and Automation</h2>
-<ul>
-<li>Software-Defined Networking<br />
-</li>
-<li>Network Virtualization<br />
-</li>
-<li>Network (Data, Control, Management planes) Programmability<br />
-</li>
-<li>Network Slicing<br />
-</li>
-<li>Management &amp; Orchestration<br />
-</li>
-<li>Network Functions Virtualization/Service Function Chaining<br />
-</li>
-<li>Cloud Native Networking, DevOps, Network Automation, Zero-Configuration Networking<br />
-</li>
-<li>Network Telemetry</li>
-</ul>
-<h2 id="management-and-control-of-communication-services">Management and Control of Communication Services</h2>
-<ul>
-<li>Information Technology Services<br />
-</li>
-<li>Virtual Networking Services<br />
-</li>
-<li>XaaS and Cloud Services<br />
-</li>
-<li>Multimedia Services<br />
-</li>
-<li>Content Delivery Services<br />
-</li>
-<li>Social Networking Services<br />
-</li>
-<li>Security Services<br />
-</li>
-<li>IoT Services<br />
-</li>
-<li>Network Resilience and High-Precision Networks</li>
-</ul>
-<h2 id="management-algorithms-and-architectures">Management Algorithms and Architectures</h2>
-<ul>
-<li>Centralized Management<br />
-</li>
-<li>Distributed Management<br />
-</li>
-<li>Autonomic Networks and Self-Management<br />
-</li>
-<li>Management Protocols<br />
-</li>
-<li>Fog and Mobile Edge Computing<br />
-</li>
-<li>Lambda Functions and Elastic Management<br />
-</li>
-<li>Data Analytics for Management<br />
-</li>
-<li>Policy-Based Management<br />
-</li>
-<li>Intent-Based Management<br />
-</li>
-<li>Network Optimization</li>
-</ul>
-<h2 id="management-functions-and-practical-approaches">Management Functions and Practical Approaches</h2>
-<ul>
-<li>FCAPS: Fault, Configuration, Accounting, Performance and Security<br />
-</li>
-<li>Case Studies and Practical Experiences<br />
-</li>
-<li>Business-Driven Management Services<br />
-</li>
-<li>Measurement and Validation<br />
-</li>
-<li>SLA Management, QoS and QoE<br />
-</li>
-<li>Energy Management<br />
-</li>
-<li>Deployment of Services<br />
-</li>
-<li>Operations Support Systems</li>
-</ul>
-<h2 id="artificial-intelligence-techniques-for-network-and-service-management">Artificial Intelligence Techniques for Network and Service Management</h2>
-<ul>
-<li>Management with AI<br />
-</li>
-<li>Markov Chains and Management<br />
-</li>
-<li>Machine Learning and Deep Learning<br />
-</li>
-<li>Management with Big Data<br />
-</li>
-<li>Mobile Agents</li>
-</ul>
-<h2 id="management-efforts-for-pandemics-and-crisis-situations-covid-19">Management Efforts for Pandemics and Crisis Situations (COVID-19)</h2>
-<ul>
-<li>Contact and Activity Tracing<br />
-</li>
-<li>Network/Service Management Support<br />
-</li>
-<li>Network Measurements<br />
-</li>
-<li>Network Adaptation<br />
-</li>
-<li>Case Studies and Practical Experiences</li>
-</ul>
-<p>================================= Organization =================================<br />
-General Co-chairs<br />
-Toufik Ahmed, Bordeaux INP, France<br />
-Olivier Festor, University of Lorraine, France</p>
-<p>TPC Co-chairs<br />
-Yacine Ghamri-Doudane, University of La Rochelle, France<br />
-Alberto E. Schaeffer-Filho, UFRGS, Brazil<br />
-Joon-Myung Kang, Google, USA</p>
-<p><span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="im-t.lyeiod-2020-10-18-top"><strong>IM t.ly#eiOD</strong> (2020-10-18) <span id="bf1f3f9270"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="eai.mtymex.smarttechspringer-2020-10-19-top">EAI.MTYMEX.SmartTech(springer) (2020-10-19) <span id="2528534e69"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>March 22-24, 2021 | Cyberspace<br />
 Abstract Submission Deadline: October 19, 2020<br />
