--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -88,22 +88,22 @@
 2020-10-08 <a href="#72ef55640f"><strike>東洋大学・情報社会の総合政策</strike></a><br />
 2020-10-09 <a href="#bc2e00886c"><strike>立命館大学.システム制御工学.無線通信・電波</strike></a><br />
 2020-10-12 <a href="#1e1dc54b48"><strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike></a><br />
-2020-10-16 <a href="#02c4b28b38">千葉経済大学・情報学分野</a><br />
+2020-10-16 <a href="#df6e0e7b31"><strike>石川県工業試験場・電気職</strike></a><br />
 2020-10-16 <a href="#d47fbc1ef1"><strike>東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</strike></a><br />
 2020-10-16 <a href="#f06ee5ac1c"><strike>大阪大学大学院・情報科学研究科✘probation</strike></a><br />
-2020-10-16 <a href="#69f2a4545a">石川県工業試験場・電気職</a><br />
 2020-10-16 <a href="#1d2e883457"><strike>愛知工科大学・組込み系システム</strike></a><br />
 2020-10-16 <a href="#9690b3ed53"><strike>FIT.制御・計測に関連する分野</strike></a><br />
 2020-10-16 <a href="#659de97e18">▲愛知工科大学・データサイエンスまたはＡＩ</a><br />
-2020-10-19 <a href="#f111cc60ef">玉川大学・ソフトウェアサイエンス学科</a><br />
-2020-10-23 <a href="#bc36a4fbc6">東京工業大学・情報通信における応用AI分野</a><br />
+2020-10-16 <a href="#7c404d1fa8"><strong>千葉経済大学・情報学分野</strong></a><br />
+2020-10-19 <a href="#8113a194d3"><strong>玉川大学・ソフトウェアサイエンス学科</strong></a><br />
+2020-10-23 <a href="#b65480a1f4"><strike>東京工業大学・情報通信における応用AI分野</strike></a><br />
 2020-10-29 <a href="#95ddb3ead5">成城大学・経営統計学</a><br />
-2020-10-30 <a href="#b2dd0e6c11">茨城キリスト教大学・経営情報分野</a><br />
+2020-10-30 <a href="#b6c208181a"><strike>茨城キリスト教大学・経営情報分野</strike></a><br />
 2020-10-30 <a href="#e79f70ac02">公立小松大学・データマイニング・機械学習・データ科学関連分野</a><br />
-2020-10-30 <a href="#ce5645d8a9">香川大学・機械システム</a><br />
-2020-10-30 <a href="#4da6d3f950">高知大学・情報工学</a><br />
-2020-10-30 <a href="#3223295a3c">足利大学・情報工学、情報科学センター</a><br />
-2020-10-30 <a href="#53f715a6b7">足利大学・人工知能</a><br />
+2020-10-30 <a href="#ae570f6519"><strike>香川大学・機械システム</strike></a><br />
+2020-10-30 <a href="#a3043ef36a"><strike>高知大学・情報工学</strike></a><br />
+2020-10-30 <a href="#734f79170d"><strike>足利大学・情報工学、情報科学センター</strike></a><br />
+2020-10-30 <a href="#cb68f1ada0"><strike>足利大学・人工知能</strike></a><br />
 2020-10-30 <a href="#b9af474c3b">福岡工業大</a><br />
 2020-11-04 <a href="#5891e45cc5">お茶の水女子大学・人間工学（ロボット工学、生体工学）</a><br />
 2020-11-04 <a href="#f455ef9cd4">久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械</a><br />
@@ -221,6 +221,7 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12007080
 <h2 id="東洋大学情報社会の総合政策-2020-10-08-top"><strike>東洋大学・情報社会の総合政策</strike> (2020-10-08) <span id="72ef55640f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="立命館大学.システム制御工学.無線通信電波-2020-10-09-top"><strike>立命館大学.システム制御工学.無線通信・電波</strike> (2020-10-09) <span id="bc2e00886c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど-2020-10-12-top"><strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike> (2020-10-12) <span id="1e1dc54b48"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="千葉経済大学情報学分野-2020-10-16-top"><strong>千葉経済大学・情報学分野</strong> (2020-10-16) <span id="7c404d1fa8"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="愛知工科大学データサイエンスまたはａｉ-2020-10-16-top">▲愛知工科大学・データサイエンスまたはＡＩ (2020-10-16) <span id="659de97e18"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 22<br />
 id : D120081431 [NEW]<br />
@@ -235,56 +236,11 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12008143
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="fit.制御計測に関連する分野-2020-10-16-top"><strike>FIT.制御・計測に関連する分野</strike> (2020-10-16) <span id="9690b3ed53"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="愛知工科大学組込み系システム-2020-10-16-top"><strike>愛知工科大学・組込み系システム</strike> (2020-10-16) <span id="1d2e883457"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="石川県工業試験場電気職-2020-10-16-top">石川県工業試験場・電気職 (2020-10-16) <span id="69f2a4545a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 8<br />
-id : D120090768 [UPDATE]<br />
-update : 2020年09月24日<br />
-univ : 石川県工業試験場・電気職<br />
-title : 石川県工業試験場研究職員採用候補者募集（電気職）<br />
-field : 工学 - 電気電子工学 情報学 - 全て<br />
-post : 研究開発・技術者相当 研究員・ポスドク相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月16日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090768&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090768&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="千葉経済大学情報学分野-2020-10-16-top">千葉経済大学・情報学分野 (2020-10-16) <span id="02c4b28b38"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 15<br />
-id : D120090442 [NEW]<br />
-update : 2020年09月09日<br />
-univ : 千葉経済大学・情報学分野<br />
-title : 専任教員の公募（情報学分野）<br />
-field : 情報学 - 全て<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月16日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090442&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090442&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="石川県工業試験場電気職-2020-10-16-top"><strike>石川県工業試験場・電気職</strike> (2020-10-16) <span id="df6e0e7b31"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="大阪大学大学院情報科学研究科probation-2020-10-16-top"><strike>大阪大学大学院・情報科学研究科✘probation</strike> (2020-10-16) <span id="f06ee5ac1c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究-2020-10-16-top"><strike>東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</strike> (2020-10-16) <span id="d47fbc1ef1"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="玉川大学ソフトウェアサイエンス学科-2020-10-19-top">玉川大学・ソフトウェアサイエンス学科 (2020-10-19) <span id="f111cc60ef"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 9<br />
-id : D120090977 [NEW]<br />
-update : 2020年09月25日<br />
-univ : 玉川大学・ソフトウェアサイエンス学科<br />
-title : 玉川大学工学部ソフトウェアサイエンス学科教員（教授、准教授または助教）の公募について<br />
-field : 情報学 - 計算基盤<br />
-post : 教授相当 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月19日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090977&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090977&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="東京工業大学情報通信における応用ai分野-2020-10-23-top">東京工業大学・情報通信における応用AI分野 (2020-10-23) <span id="bc36a4fbc6"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 17<br />
-id : D120080991 [UPDATE]<br />
-update : 2020年08月21日<br />
-univ : 東京工業大学・情報通信における応用AI分野<br />
-title : 教授公募（電気電子および情報通信における応用AI分野）<br />
-field : 工学 - 電気電子工学 工学 - 総合工学 総合理工 - 計算科学<br />
-post : 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月23日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080991&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080991&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="玉川大学ソフトウェアサイエンス学科-2020-10-19-top"><strong>玉川大学・ソフトウェアサイエンス学科</strong> (2020-10-19) <span id="8113a194d3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="東京工業大学情報通信における応用ai分野-2020-10-23-top"><strike>東京工業大学・情報通信における応用AI分野</strike> (2020-10-23) <span id="b65480a1f4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="成城大学経営統計学-2020-10-29-top">成城大学・経営統計学 (2020-10-29) <span id="95ddb3ead5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 11<br />
 id : D120091653 [UPDATE]<br />
@@ -297,18 +253,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年10月29日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091653&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091653&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="茨城キリスト教大学経営情報分野-2020-10-30-top">茨城キリスト教大学・経営情報分野 (2020-10-30) <span id="b2dd0e6c11"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 11<br />
-id : D120090952 [NEW]<br />
-update : 2020年09月29日<br />
-univ : 茨城キリスト教大学・経営情報分野<br />
-title : 専任教員の公募について（経営情報分野）<br />
-field : 社会科学 - 経営学<br />
-post : 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090952&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090952&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="茨城キリスト教大学経営情報分野-2020-10-30-top"><strike>茨城キリスト教大学・経営情報分野</strike> (2020-10-30) <span id="b6c208181a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="公立小松大学データマイニング機械学習データ科学関連分野-2020-10-30-top">公立小松大学・データマイニング・機械学習・データ科学関連分野 (2020-10-30) <span id="e79f70ac02"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 42<br />
 id : D120091624 [NEW]<br />
@@ -321,54 +266,10 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年10月30日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091624&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091624&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="香川大学機械システム-2020-10-30-top">香川大学・機械システム (2020-10-30) <span id="ce5645d8a9"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 17<br />
-id : D120071441 [UPDATE]<br />
-update : 2020年07月27日<br />
-univ : 香川大学・機械システム<br />
-title : 創造工学部　准教授，講師または助教の公募（機械システムコース）<br />
-field : 工学 - 機械工学<br />
-post : 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071441&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071441&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="高知大学情報工学-2020-10-30-top">高知大学・情報工学 (2020-10-30) <span id="4da6d3f950"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 29<br />
-id : D120090573 [NEW]<br />
-update : 2020年09月11日<br />
-univ : 高知大学・情報工学<br />
-title : 高知大学教育学部教員公募（情報工学）<br />
-field : 情報学 - 情報学基礎 情報学 - 計算基盤 情報学 - 人間情報学<br />
-post : 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090573&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090573&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="足利大学情報工学情報科学センター-2020-10-30-top">足利大学・情報工学、情報科学センター (2020-10-30) <span id="3223295a3c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 41<br />
-id : D120080024 [NEW]<br />
-update : 2020年08月05日<br />
-univ : 足利大学・情報工学、情報科学センター<br />
-title : 足利大学　工学部　教員の公募（情報工学、情報科学センター）<br />
-field : 情報学 - 計算基盤<br />
-post : 助教相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080024&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080024&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="足利大学人工知能-2020-10-30-top">足利大学・人工知能 (2020-10-30) <span id="53f715a6b7"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 40<br />
-id : D120080023 [NEW]<br />
-update : 2020年08月05日<br />
-univ : 足利大学・人工知能<br />
-title : 足利大学　工学部　教員の公募（人工知能の応用研究）<br />
-field : 情報学 - 人間情報学 情報学 - 情報学基礎 情報学 - 計算基盤<br />
-post : 助教相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080023&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080023&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="香川大学機械システム-2020-10-30-top"><strike>香川大学・機械システム</strike> (2020-10-30) <span id="ae570f6519"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="高知大学情報工学-2020-10-30-top"><strike>高知大学・情報工学</strike> (2020-10-30) <span id="a3043ef36a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="足利大学情報工学情報科学センター-2020-10-30-top"><strike>足利大学・情報工学、情報科学センター</strike> (2020-10-30) <span id="734f79170d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="足利大学人工知能-2020-10-30-top"><strike>足利大学・人工知能</strike> (2020-10-30) <span id="cb68f1ada0"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="福岡工業大-2020-10-30-top">福岡工業大 (2020-10-30) <span id="b9af474c3b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：9<br />
 データ番号 ：D120050908 [NEW]<br />
