--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -97,16 +97,16 @@
 2020-10-16 <a href="#7c404d1fa8"><strong>千葉経済大学・情報学分野</strong></a><br />
 2020-10-19 <a href="#8113a194d3"><strong>玉川大学・ソフトウェアサイエンス学科</strong></a><br />
 2020-10-23 <a href="#b65480a1f4"><strike>東京工業大学・情報通信における応用AI分野</strike></a><br />
-2020-10-29 <a href="#95ddb3ead5">成城大学・経営統計学</a><br />
+2020-10-29 <a href="#e7b05c7bef"><strike>成城大学・経営統計学✘bad format</strike></a><br />
+2020-10-30 <a href="#97dae4a97f"><strong>福岡工業大</strong></a><br />
 2020-10-30 <a href="#b6c208181a"><strike>茨城キリスト教大学・経営情報分野</strike></a><br />
 2020-10-30 <a href="#e79f70ac02">公立小松大学・データマイニング・機械学習・データ科学関連分野</a><br />
 2020-10-30 <a href="#ae570f6519"><strike>香川大学・機械システム</strike></a><br />
 2020-10-30 <a href="#a3043ef36a"><strike>高知大学・情報工学</strike></a><br />
 2020-10-30 <a href="#734f79170d"><strike>足利大学・情報工学、情報科学センター</strike></a><br />
 2020-10-30 <a href="#cb68f1ada0"><strike>足利大学・人工知能</strike></a><br />
-2020-10-30 <a href="#b9af474c3b">福岡工業大</a><br />
-2020-11-04 <a href="#5891e45cc5">お茶の水女子大学・人間工学（ロボット工学、生体工学）</a><br />
-2020-11-04 <a href="#f455ef9cd4">久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械</a><br />
+2020-11-04 <a href="#4ef9e4ed80"><strong>お茶の水女子大学・人間工学（ロボット工学、生体工学）</strong></a><br />
+2020-11-04 <a href="#b2a52dfb72"><strike>久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械</strike></a><br />
 2020-11-05 <a href="#0d6435b414">名古屋市立大学・情報環境デザイン領域</a><br />
 2020-11-06 <a href="#77ccc75f17">近畿大学・情報セキュリティ教育</a><br />
 2020-11-10 <a href="#56ddb64634">情報システム工学科</a><br />
@@ -241,18 +241,8 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12008143
 <h2 id="東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究-2020-10-16-top"><strike>東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</strike> (2020-10-16) <span id="d47fbc1ef1"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="玉川大学ソフトウェアサイエンス学科-2020-10-19-top"><strong>玉川大学・ソフトウェアサイエンス学科</strong> (2020-10-19) <span id="8113a194d3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京工業大学情報通信における応用ai分野-2020-10-23-top"><strike>東京工業大学・情報通信における応用AI分野</strike> (2020-10-23) <span id="b65480a1f4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="成城大学経営統計学-2020-10-29-top">成城大学・経営統計学 (2020-10-29) <span id="95ddb3ead5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 11<br />
-id : D120091653 [UPDATE]<br />
-update : 2020年10月01日<br />
-univ : 成城大学・経営統計学<br />
-title : 成城大学経済学部　専任教員(准教授または専任講師)の公募(経営統計学）<br />
-field : 社会科学 - 全て 数物系科学 - 全て 複合領域 - データサイエンス<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月29日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091653&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091653&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="成城大学経営統計学bad-format-2020-10-29-top"><strike>成城大学・経営統計学✘bad format</strike> (2020-10-29) <span id="e7b05c7bef"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="福岡工業大-2020-10-30-top"><strong>福岡工業大</strong> (2020-10-30) <span id="97dae4a97f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="茨城キリスト教大学経営情報分野-2020-10-30-top"><strike>茨城キリスト教大学・経営情報分野</strike> (2020-10-30) <span id="b6c208181a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="公立小松大学データマイニング機械学習データ科学関連分野-2020-10-30-top">公立小松大学・データマイニング・機械学習・データ科学関連分野 (2020-10-30) <span id="e79f70ac02"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 42<br />
@@ -270,60 +260,8 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12009162
 <h2 id="高知大学情報工学-2020-10-30-top"><strike>高知大学・情報工学</strike> (2020-10-30) <span id="a3043ef36a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="足利大学情報工学情報科学センター-2020-10-30-top"><strike>足利大学・情報工学、情報科学センター</strike> (2020-10-30) <span id="734f79170d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="足利大学人工知能-2020-10-30-top"><strike>足利大学・人工知能</strike> (2020-10-30) <span id="cb68f1ada0"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="福岡工業大-2020-10-30-top">福岡工業大 (2020-10-30) <span id="b9af474c3b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：9<br />
-データ番号 ：D120050908 [NEW]<br />
-更新日 ：2020年05月29日<br />
-機関名 ：福岡工業大学<br />
-タイトル ：福岡工業大学　教員公募【情報工学（人工知能）または関連分野】<br />
-研究分野 ：情報学 - 人間情報学<br />
-総合理工 - 計算科学<br />
-工学 - 電気電子工学<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-助教相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年10月30日</p>
-<p>ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050908&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050908&amp;ln_jor=0&amp;top_btn=1</a></p>
-<p>No. ：10<br />
-データ番号 ：D120050911 [NEW]<br />
-更新日 ：2020年05月29日<br />
-機関名 ：福岡工業大学<br />
-タイトル ：福岡工業大学　教員公募【情報工学（コンピュータ工学）または関連分野】<br />
-研究分野 ：情報学 - 計算基盤<br />
-工学 - 電気電子工学<br />
-総合理工 - 全て<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-助教相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年10月30日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050911&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050911&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="お茶の水女子大学人間工学ロボット工学生体工学-2020-11-04-top">お茶の水女子大学・人間工学（ロボット工学、生体工学） (2020-11-04) <span id="5891e45cc5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 36<br />
-id : D120091137 [UPDATE]<br />
-update : 2020年09月18日<br />
-univ : お茶の水女子大学・人間工学（ロボット工学、生体工学）<br />
-title : 教授又は准教授の公募（人間工学分野）<br />
-field : 工学 - 人間工学（ロボット工学、生体工学）<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月04日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091137&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091137&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="久留米工業大学iotaiロボティクスメカトロニクス知能機械-2020-11-04-top">久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械 (2020-11-04) <span id="f455ef9cd4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 40<br />
-id : D120090870 [NEW]<br />
-update : 2020年09月16日<br />
-univ : 久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械<br />
-title : 教授，准教授もしくは講師の公募（IoT・AIロボティクス・メカトロニクス・知能機械）分野<br />
-field : 工学 - 機械工学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月04日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090870&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090870&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="お茶の水女子大学人間工学ロボット工学生体工学-2020-11-04-top"><strong>お茶の水女子大学・人間工学（ロボット工学、生体工学）</strong> (2020-11-04) <span id="4ef9e4ed80"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="久留米工業大学iotaiロボティクスメカトロニクス知能機械-2020-11-04-top"><strike>久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械</strike> (2020-11-04) <span id="b2a52dfb72"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="名古屋市立大学情報環境デザイン領域-2020-11-05-top">名古屋市立大学・情報環境デザイン領域 (2020-11-05) <span id="0d6435b414"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 40<br />
 id : D120090476 [NEW]<br />
