--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -98,9 +98,9 @@
 2020-10-19 <a href="#8113a194d3"><strong>玉川大学・ソフトウェアサイエンス学科</strong></a><br />
 2020-10-23 <a href="#b65480a1f4"><strike>東京工業大学・情報通信における応用AI分野</strike></a><br />
 2020-10-29 <a href="#e7b05c7bef"><strike>成城大学・経営統計学✘bad format</strike></a><br />
+2020-10-30 <a href="#67c9a28b29"><strong>公立小松大学・データマイニング・機械学習・データ科学関連分野</strong></a><br />
 2020-10-30 <a href="#97dae4a97f"><strong>福岡工業大</strong></a><br />
 2020-10-30 <a href="#b6c208181a"><strike>茨城キリスト教大学・経営情報分野</strike></a><br />
-2020-10-30 <a href="#e79f70ac02">公立小松大学・データマイニング・機械学習・データ科学関連分野</a><br />
 2020-10-30 <a href="#ae570f6519"><strike>香川大学・機械システム</strike></a><br />
 2020-10-30 <a href="#a3043ef36a"><strike>高知大学・情報工学</strike></a><br />
 2020-10-30 <a href="#734f79170d"><strike>足利大学・情報工学、情報科学センター</strike></a><br />
@@ -242,20 +242,9 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12008143
 <h2 id="玉川大学ソフトウェアサイエンス学科-2020-10-19-top"><strong>玉川大学・ソフトウェアサイエンス学科</strong> (2020-10-19) <span id="8113a194d3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京工業大学情報通信における応用ai分野-2020-10-23-top"><strike>東京工業大学・情報通信における応用AI分野</strike> (2020-10-23) <span id="b65480a1f4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="成城大学経営統計学bad-format-2020-10-29-top"><strike>成城大学・経営統計学✘bad format</strike> (2020-10-29) <span id="e7b05c7bef"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="公立小松大学データマイニング機械学習データ科学関連分野-2020-10-30-top"><strong>公立小松大学・データマイニング・機械学習・データ科学関連分野</strong> (2020-10-30) <span id="67c9a28b29"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="福岡工業大-2020-10-30-top"><strong>福岡工業大</strong> (2020-10-30) <span id="97dae4a97f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="茨城キリスト教大学経営情報分野-2020-10-30-top"><strike>茨城キリスト教大学・経営情報分野</strike> (2020-10-30) <span id="b6c208181a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="公立小松大学データマイニング機械学習データ科学関連分野-2020-10-30-top">公立小松大学・データマイニング・機械学習・データ科学関連分野 (2020-10-30) <span id="e79f70ac02"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 42<br />
-id : D120091624 [NEW]<br />
-update : 2020年09月30日<br />
-univ : 公立小松大学・データマイニング・機械学習・データ科学関連分野<br />
-title : 助教または准教授の公募（データマイニング、機械学習、データ科学関連分野）<br />
-field : 情報学 - 情報学基礎<br />
-post : 助教相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091624&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091624&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="香川大学機械システム-2020-10-30-top"><strike>香川大学・機械システム</strike> (2020-10-30) <span id="ae570f6519"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="高知大学情報工学-2020-10-30-top"><strike>高知大学・情報工学</strike> (2020-10-30) <span id="a3043ef36a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="足利大学情報工学情報科学センター-2020-10-30-top"><strike>足利大学・情報工学、情報科学センター</strike> (2020-10-30) <span id="734f79170d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
