--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -18,8 +18,8 @@
 2020-07-31 <a href="#88df76a674"><strike>九州国際大.情報学基礎✘badformat</strike></a><br />
 2020-07-31 <a href="#5be1a16a7d"><strike>法政大.信号処理、統計、計測、機械学習分野✘推薦書</strike></a><br />
 2020-08-12 <a href="#eba26c37a7"><strong>三重大.知能工学講座・データサイエンス2jobs</strong></a><br />
-2020-08-17 <a href="#cc72ebc329"><strong>筑波大</strong></a><br />
 2020-08-17 <a href="#6813c0372e"><strike>NAIST.ロボティクス分野</strike></a><br />
+2020-08-17 <a href="#cc72ebc329"><strong>筑波大</strong></a><br />
 2020-08-19 <a href="#6c5b98a780"><strong>岡山県立大.知覚情報処理</strong></a><br />
 2020-08-19 <a href="#ebe3a401a3"><strike>近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs✘推薦書</strike></a><br />
 2020-08-21 <a href="#ec0c9d0945"><strong>玉川大学.国際教養学科✌jrec</strong></a><br />
@@ -29,57 +29,57 @@
 2020-08-25 <a href="#3b52ef5769"><strike>日本大.ロボット・制御✘mismatch</strike></a><br />
 2020-08-28 <a href="#7a9ddac77a"><strong>広島工業大・経営情報システム✌jrec</strong></a><br />
 2020-08-28 <a href="#0118e43dac"><strike>和光大学.情報の基礎✖too much work</strike></a><br />
+2020-08-31 <a href="#f30c6a579f"><strike>工学院大学.情報学フロンティア-情報学✘推薦書</strike></a><br />
 2020-08-31 <a href="#7863862135"><strike>般社団法人CRD</strike></a><br />
 2020-08-31 <a href="#4bb5c2134d"><strike>日本工業大✘推薦書</strike></a><br />
 2020-08-31 <a href="#5dc0b999ce"><strike>東京都立大.情報学基礎.2posts</strike></a><br />
 2020-08-31 <a href="#d0f5a713b7"><strike>東京都市大学・経営情報システム</strike></a><br />
-2020-08-31 <a href="#37848dfdf7"><strike>東京電機大.人間情報学✘推薦書</strike></a><br />
-2020-08-31 <a href="#f30c6a579f"><strike>工学院大学.情報学フロンティア-情報学✘推薦書</strike></a><br />
 2020-08-31 <a href="#32698d566d"><strike>工学院大学.複合領域-デザイン学-総合理工-計算科学</strike></a><br />
-2020-08-31 <a href="#5a15378daf"><strike>滋賀県立大.センシング工学分野</strike></a><br />
+2020-08-31 <a href="#37848dfdf7"><strike>東京電機大.人間情報学✘推薦書</strike></a><br />
 2020-08-31 <a href="#85650c17d1"><strike>京都大.通信情報システム中✘試用</strike></a><br />
+2020-08-31 <a href="#f7ab33943c"><strong>大阪大.情報科学☢試用6カ月✌jrec</strong></a><br />
 2020-08-31 <a href="#840cca4261"><strike>株式会社Nextremer.計算科学.quantum</strike></a><br />
+2020-08-31 <a href="#e9f602ab47"><strong>岡山大学.サイバーフィジカル情報の応用研究</strong></a><br />
+2020-08-31 <a href="#fe42bd3f2b"><strong>駒澤大.情報分野✌jrec</strong></a><br />
+2020-08-31 <a href="#5a15378daf"><strike>滋賀県立大.センシング工学分野</strike></a><br />
+2020-08-31 <a href="#3701387ba6"><strong>東京都市大学・情報学</strong></a><br />
 2020-08-31 <a href="#f72003b137"><strike>岡山理科大(ous).情報数理.情報工学.2posts✘(still)toomuchwork</strike></a><br />
 2020-08-31 <a href="#1a938c377d"><strong>立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース★english</strong></a><br />
-2020-08-31 <a href="#3701387ba6"><strong>東京都市大学・情報学</strong></a><br />
-2020-08-31 <a href="#f7ab33943c"><strong>大阪大.情報科学☢試用6カ月✌jrec</strong></a><br />
-2020-08-31 <a href="#fe42bd3f2b"><strong>駒澤大.情報分野✌jrec</strong></a><br />
-2020-08-31 <a href="#e9f602ab47"><strong>岡山大学.サイバーフィジカル情報の応用研究</strong></a><br />
 2020-09-07 <a href="#69b2d17e9b"><strike>明治大✘推薦書</strike></a><br />
-2020-09-10 <a href="#eb8e5a0a84"><strike>広島工業大学・情報ネットワーク(did.not.make.it)</strike></a><br />
+2020-09-10 <a href="#66bd3309b3"><strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong></a><br />
 2020-09-10 <a href="#35125b0dbe"><strike>公立はこだて未来大</strike></a><br />
 2020-09-10 <a href="#6238f6a583"><strike>広島工業大学・コンピュータシステム</strike></a><br />
-2020-09-10 <a href="#66bd3309b3"><strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong></a><br />
+2020-09-10 <a href="#eb8e5a0a84"><strike>広島工業大学・情報ネットワーク(did.not.make.it)</strike></a><br />
 2020-09-11 <a href="#2b70b01167"><strong>★金沢大学.IoT及び情報通信分野</strong></a><br />
 2020-09-11 <a href="#1cb0d08d32"><strong>法政大学.情報科学部コンピュータ科学科✌freeform✌jrecin</strong></a><br />
 2020-09-11 <a href="#08ce89f323"><strike>北海道.情報科学研究院</strike></a><br />
 2020-09-11 <a href="#439bd40748"><strike>明治大学・統計科学・統計数学・知能情報科学</strike></a><br />
-2020-09-14 <a href="#dc97c1915a"><strong>★東京理科大工学部情報工学科インテリジェントシステム分野</strong></a><br />
-2020-09-14 <a href="#3e98d45b55"><strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike></a><br />
 2020-09-14 <a href="#391814b22c"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike></a><br />
+2020-09-14 <a href="#3e98d45b55"><strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike></a><br />
+2020-09-14 <a href="#dc97c1915a"><strong>★東京理科大工学部情報工学科インテリジェントシステム分野</strong></a><br />
 2020-09-15 <a href="#bc9b288934"><strong>青山学院大.情報社会科学✌freeform</strong></a><br />
 2020-09-15 <a href="#2dc7263a05"><strike>岡山大学.ハードウェア.ソフトウェア</strike></a><br />
+2020-09-18 <a href="#f23bf169da"><strike>東京電機大学・情報学部門</strike></a><br />
 2020-09-18 <a href="#9dd8a9b667"><strong>▲長岡技術科学大.情報・経営システム工学専攻</strong></a><br />
 2020-09-18 <a href="#a7a4cfb276"><strike>京都先端科学大学・統計やビジネスデータの見方</strike></a><br />
-2020-09-18 <a href="#f23bf169da"><strike>東京電機大学・情報学部門</strike></a><br />
 2020-09-20 <a href="#652ff68ecc"><strike>松本大学.データサイエンス.情報学-データサイエンス</strike></a><br />
 2020-09-21 <a href="#8c0538b87d"><strike>法政大学.情報学・計算基盤(picked.another.200911)</strike></a><br />
 2020-09-23 <a href="#0782a814ca"><strike>岐阜聖徳学園大学・情報学</strike></a><br />
-2020-09-25 <a href="#8ab7884d11"><strike>東京大学.高性能計算地球科学分野</strike></a><br />
-2020-09-25 <a href="#8b54bc80b6"><strike>岩手県立大.人工知能コース</strike></a><br />
-2020-09-25 <a href="#6a2cb633b3"><strike>★東京理科大.数理モデリング、知能数理分野</strike></a><br />
-2020-09-25 <a href="#f89d94d8d4"><strike>▲日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野☢福島</strike></a><br />
 2020-09-25 <a href="#a899e6ba64"><strong>▲成蹊大学.総合理工-計算科学-数物系科学</strong></a><br />
+2020-09-25 <a href="#6a2cb633b3"><strike>★東京理科大.数理モデリング、知能数理分野</strike></a><br />
+2020-09-25 <a href="#8b54bc80b6"><strike>岩手県立大.人工知能コース</strike></a><br />
+2020-09-25 <a href="#8ab7884d11"><strike>東京大学.高性能計算地球科学分野</strike></a><br />
+2020-09-25 <a href="#f89d94d8d4"><strike>▲日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野☢福島</strike></a><br />
 2020-09-28 <a href="#2277a8f108"><strike>岡山大学・知能機械システム学講座</strike></a><br />
+2020-09-30 <a href="#bad52fddb6"><strike>熊本大学・ビッグデータ</strike></a><br />
 2020-09-30 <a href="#8259a50aec"><strike>名城大学・情報学、統計学、フィールド調査</strike></a><br />
 2020-09-30 <a href="#1444194ab3"><strike>北海道大学.数理科学・応用数学分野</strike></a><br />
 2020-09-30 <a href="#bf3d9f6641"><strike>兵庫県立大学・情報通信工学</strike></a><br />
 2020-09-30 <a href="#c322643ba2">兵庫県立大学.情報学-情報通信-ネットワーク</a><br />
 2020-09-30 <a href="#1ac3083abc"><strike>兵庫県立大学.AI・IoT・ビックデータ</strike></a><br />
-2020-09-30 <a href="#bad52fddb6"><strike>熊本大学・ビッグデータ</strike></a><br />
-2020-09-30 <a href="#829301a770"><strike>岡山大学・電気電子機能開発・powerelec</strike></a><br />
-2020-09-30 <a href="#83e6037ba4"><strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike></a><br />
 2020-09-30 <a href="#a31425d7c9"><strike>▲静岡理工科大学.電子情報分野(smalluni)</strike></a><br />
+2020-09-30 <a href="#83e6037ba4"><strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike></a><br />
+2020-09-30 <a href="#829301a770"><strike>岡山大学・電気電子機能開発・powerelec</strike></a><br />
 2020-09-30 <a href="#ade6a37b46"><strike>▲成蹊大.計算科学(1of2)</strike></a><br />
 2020-09-30 <a href="#384da3400c"><strong>福岡大.情報学</strong></a><br />
 2020-09-30 <a href="#46260b9624"><strong>★龍谷大学・情報科学分野</strong></a><br />
@@ -116,26 +116,25 @@
 2020-11-14 <a href="#f5ef6dd0d6"><strike>白百合女子大学・情報教育・プログラミング教育・ICT教育‼調布・推薦</strike></a><br />
 2020-11-18 <a href="#64e8872cce"><strike>滋賀県立大学・知能情報工学分野・データサイエンス‼エクセルCV</strike></a><br />
 2020-11-20 <a href="#d92eb0918b"><strike>岡山理科大学・計算機工学・コンピュータシステム分野✘toomuchwork</strike></a><br />
-2020-11-20 <a href="#d8a250a3ae">香川大学・情報通信コース</a><br />
-2020-11-24 <a href="#de97413623">広島大学・情報メディア教育研究センター</a><br />
-2020-11-26 <a href="#a82018d1b1">九州大学・ロシア語担当</a><br />
-2020-11-30 <a href="#311d9813ff">情報・経営システム工学</a><br />
+2020-11-20 <a href="#6775ef2540"><strike>香川大学・情報通信コース</strike></a><br />
+2020-11-24 <a href="#42361c765c"><strike>広島大学・情報メディア教育研究センター</strike></a><br />
+2020-11-26 <a href="#7cfb49e52b"><strike>九州大学・ロシア語担当</strike></a><br />
 2020-11-30 <a href="#8ba5fdc674">名古屋商科大学・情報</a><br />
-2020-11-30 <a href="#36514170a7">東京大学・人間エネルギー環境学分野</a><br />
+2020-11-30 <a href="#8a765a3a6e"><strike>東京大学・人間エネルギー環境学分野</strike></a><br />
 2020-11-30 <a href="#718bc1a3d7">長岡技術科学大学・情報・経営システム工学</a><br />
 2020-11-30 <a href="#409791d615">信州大学.通信システム分野</a><br />
-2020-11-30 <a href="#f562476bd3">金沢大学・先端科学・社会共創推進機構・人材育成グループ</a><br />
-2020-11-30 <a href="#a33e7784ed">金沢大学・先端科学・社会共創推進機構</a><br />
-2020-11-30 <a href="#c042cfbefd">京都大学・国際高等教育院附属データ科学イノベーション教育研究センター</a><br />
-2020-11-30 <a href="#0fbd1530e5">岐阜大学・数理・データサイエンス</a><br />
+2020-11-30 <a href="#ba663a9993"><strike>金沢大学・先端科学・社会共創推進機構・人材育成グループ</strike></a><br />
+2020-11-30 <a href="#3e8e47f219"><strike>金沢大学・先端科学・社会共創推進機構</strike></a><br />
+2020-11-30 <a href="#55c82ddb17"><strike>京都大学・国際高等教育院附属データ科学イノベーション教育研究センター</strike></a><br />
+2020-11-30 <a href="#38700a9f8d"><strike>岐阜大学・数理・データサイエンス</strike></a><br />
 2020-11-30 <a href="#2189fbd229"><strike>岡山理科大学・データサイエンス</strike></a><br />
 2020-12-01 <a href="#2035b98127">東京工業大学・ソフトウェア工学分野</a><br />
 2020-12-03 <a href="#7028f433f1">広島工業大学・コンピュータシステム</a><br />
 2020-12-04 <a href="#1498d86d5c">岩手大学・情報基盤センター</a><br />
 2020-12-04 <a href="#0cdf25b703">九州国際大学・ビジネスデータ分析</a><br />
 2020-12-04 <a href="#7d6374b6c5">長岡技術科学大学・情報通信制御システム工学講座</a><br />
-2020-12-05 <a href="#c8cf3bebc9">東京電機大学・情報システムデザイン</a><br />
 2020-12-05 <a href="#278c5c9f8b">東京都市大学・情報科学科・計算機工学分野</a><br />
+2020-12-05 <a href="#c8cf3bebc9">東京電機大学・情報システムデザイン</a><br />
 2020-12-06 <a href="#76dc27d809">神奈川工科大学・情報学部・情報メディア学科</a><br />
 2020-12-07 <a href="#0d6435b414">名古屋市立大学・情報環境デザイン領域</a><br />
 2020-12-08 <a href="#ec5fe532c5">データ同化研究チーム</a><br />
@@ -301,102 +300,14 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12008143
 <h2 id="白百合女子大学情報教育プログラミング教育ict教育調布推薦-2020-11-14-top"><strike>白百合女子大学・情報教育・プログラミング教育・ICT教育‼調布・推薦</strike> (2020-11-14) <span id="f5ef6dd0d6"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="滋賀県立大学知能情報工学分野データサイエンスエクセルcv-2020-11-18-top"><strike>滋賀県立大学・知能情報工学分野・データサイエンス‼エクセルCV</strike> (2020-11-18) <span id="64e8872cce"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岡山理科大学計算機工学コンピュータシステム分野toomuchwork-2020-11-20-top"><strike>岡山理科大学・計算機工学・コンピュータシステム分野✘toomuchwork</strike> (2020-11-20) <span id="d92eb0918b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="香川大学情報通信コース-2020-11-20-top">香川大学・情報通信コース (2020-11-20) <span id="d8a250a3ae"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 13<br />
-id : D120100241 [NEW]<br />
-update : 2020年10月09日<br />
-univ : 香川大学・情報通信コース<br />
-title : 創造工学部 准教授または講師の公募（情報通信コース）<br />
-field : 情報学 - 全て 工学 - 全て<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月20日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120100241&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120100241&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="広島大学情報メディア教育研究センター-2020-11-24-top">広島大学・情報メディア教育研究センター (2020-11-24) <span id="de97413623"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 21<br />
-id : D120101465 [UPDATE]<br />
-update : 2020年10月23日<br />
-univ : 広島大学・情報メディア教育研究センター<br />
-title : 情報メディア教育研究センター　教授又は准教授の公募<br />
-field : 情報学 - 計算基盤<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月24日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120101465&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120101465&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="九州大学ロシア語担当-2020-11-26-top">九州大学・ロシア語担当 (2020-11-26) <span id="a82018d1b1"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>id : D120110054 [NEW]<br />
-update : 2020年11月05日<br />
-univ : 九州大学・ロシア語担当<br />
-title : 専任教授の公募（ロシア語担当、大学院言語文化研究院国際文化共生学部門国際文化学講座）<br />
-field : 人文学 - 20世紀ロシア・ソ連の思想および文化<br />
-post : 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月26日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120110054&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120110054&amp;ln_jor=0&amp;top_btn=1</a> ———-</p>
-<p><span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="香川大学情報通信コース-2020-11-20-top"><strike>香川大学・情報通信コース</strike> (2020-11-20) <span id="6775ef2540"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="広島大学情報メディア教育研究センター-2020-11-24-top"><strike>広島大学・情報メディア教育研究センター</strike> (2020-11-24) <span id="42361c765c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="九州大学ロシア語担当-2020-11-26-top"><strike>九州大学・ロシア語担当</strike> (2020-11-26) <span id="7cfb49e52b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岡山理科大学データサイエンス-2020-11-30-top"><strike>岡山理科大学・データサイエンス</strike> (2020-11-30) <span id="2189fbd229"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="岐阜大学数理データサイエンス-2020-11-30-top">岐阜大学・数理・データサイエンス (2020-11-30) <span id="0fbd1530e5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 30<br />
-id : D120091749 [NEW]<br />
-update : 2020年10月06日<br />
-univ : 岐阜大学・数理・データサイエンス<br />
-title : 岐阜大学工学部電気電子・情報工学科　情報コース教員（准教授）公募<br />
-field : 情報学 - 情報学基礎 情報学 - 数理・データサイエンス<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091749&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091749&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="京都大学国際高等教育院附属データ科学イノベーション教育研究センター-2020-11-30-top">京都大学・国際高等教育院附属データ科学イノベーション教育研究センター (2020-11-30) <span id="c042cfbefd"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 18<br />
-id : D120102117 [NEW]<br />
-update : 2020年10月31日<br />
-univ : 京都大学・国際高等教育院附属データ科学イノベーション教育研究センター<br />
-title : 京都大学国際高等教育院附属データ科学イノベーション教育研究センター 教授の公募について<br />
-field : 情報学 - 全て<br />
-post : 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120102117&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120102117&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="金沢大学先端科学社会共創推進機構-2020-11-30-top">金沢大学・先端科学・社会共創推進機構 (2020-11-30) <span id="a33e7784ed"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 26<br />
-id : D120091456 [NEW]<br />
-update : 2020年09月29日<br />
-univ : 金沢大学・先端科学・社会共創推進機構<br />
-title : 教授又は准教授（リサーチ・アドミニストレーター）の公募（先端科学・社会共創推進機構）<br />
-field : その他 - 研究推進業務 その他 - 産学官連携業務<br />
-post : 研究管理者相当 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091456&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091456&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="金沢大学先端科学社会共創推進機構人材育成グループ-2020-11-30-top">金沢大学・先端科学・社会共創推進機構・人材育成グループ (2020-11-30) <span id="f562476bd3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 25<br />
-id : D120091455 [NEW]<br />
-update : 2020年09月29日<br />
-univ : 金沢大学・先端科学・社会共創推進機構・人材育成グループ<br />
-title : 教授又は准教授の公募（先端科学・社会共創推進機構・人材育成グループ）<br />
-field : その他 - 地域連携 その他 - 社会共創<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091455&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091455&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="情報経営システム工学-2020-11-30-top">情報・経営システム工学 (2020-11-30) <span id="311d9813ff"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 24<br />
-id : D120061125 [NEW]<br />
-update : 2020年06月20日<br />
-univ : 長岡技術科学大学<br />
-title : 情報・経営システム工学専攻　ヒューマン情報学講座，または，ソーシャル情報システム学講座　准教授<br />
-field : 情報学 - 人間情報学 複合領域 - 脳科学 情報学 - 情報学フロンティア<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月18日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061125&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061125&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="岐阜大学数理データサイエンス-2020-11-30-top"><strike>岐阜大学・数理・データサイエンス</strike> (2020-11-30) <span id="38700a9f8d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="京都大学国際高等教育院附属データ科学イノベーション教育研究センター-2020-11-30-top"><strike>京都大学・国際高等教育院附属データ科学イノベーション教育研究センター</strike> (2020-11-30) <span id="55c82ddb17"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="金沢大学先端科学社会共創推進機構-2020-11-30-top"><strike>金沢大学・先端科学・社会共創推進機構</strike> (2020-11-30) <span id="3e8e47f219"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="金沢大学先端科学社会共創推進機構人材育成グループ-2020-11-30-top"><strike>金沢大学・先端科学・社会共創推進機構・人材育成グループ</strike> (2020-11-30) <span id="ba663a9993"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="信州大学.通信システム分野-2020-11-30-top">信州大学.通信システム分野 (2020-11-30) <span id="409791d615"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 34<br />
 id : D120091018 [UPDATE]<br />
@@ -421,18 +332,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年11月30日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091301&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091301&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="東京大学人間エネルギー環境学分野-2020-11-30-top">東京大学・人間エネルギー環境学分野 (2020-11-30) <span id="36514170a7"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 23<br />
-id : D120100790 [NEW]<br />
-update : 2020年10月17日<br />
-univ : 東京大学・人間エネルギー環境学分野<br />
-title : 公募 人間エネルギー環境学分野 教授<br />
-field : 工学 - 全て 総合理工 - 全て 環境学 - 全て<br />
-post : 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120100790&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120100790&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="東京大学人間エネルギー環境学分野-2020-11-30-top"><strike>東京大学・人間エネルギー環境学分野</strike> (2020-11-30) <span id="8a765a3a6e"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="名古屋商科大学情報-2020-11-30-top">名古屋商科大学・情報 (2020-11-30) <span id="8ba5fdc674"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 53<br />
 id : D120101256 [NEW]<br />
