--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -119,10 +119,10 @@
 2020-11-20 <a href="#6775ef2540"><strike>香川大学・情報通信コース</strike></a><br />
 2020-11-24 <a href="#42361c765c"><strike>広島大学・情報メディア教育研究センター</strike></a><br />
 2020-11-26 <a href="#7cfb49e52b"><strike>九州大学・ロシア語担当</strike></a><br />
-2020-11-30 <a href="#8ba5fdc674">名古屋商科大学・情報</a><br />
+2020-11-30 <a href="#de05684f07"><strike>名古屋商科大学・情報(nolab)</strike></a><br />
 2020-11-30 <a href="#8a765a3a6e"><strike>東京大学・人間エネルギー環境学分野</strike></a><br />
-2020-11-30 <a href="#718bc1a3d7">長岡技術科学大学・情報・経営システム工学</a><br />
-2020-11-30 <a href="#409791d615">信州大学.通信システム分野</a><br />
+2020-11-30 <a href="#f6c3f2851b"><strike>長岡技術科学大学・情報・経営システム工学(better.at.1204)</strike></a><br />
+2020-11-30 <a href="#6b485e1aec"><strike>信州大学.通信システム分野(助教)</strike></a><br />
 2020-11-30 <a href="#ba663a9993"><strike>金沢大学・先端科学・社会共創推進機構・人材育成グループ</strike></a><br />
 2020-11-30 <a href="#3e8e47f219"><strike>金沢大学・先端科学・社会共創推進機構</strike></a><br />
 2020-11-30 <a href="#55c82ddb17"><strike>京都大学・国際高等教育院附属データ科学イノベーション教育研究センター</strike></a><br />
@@ -308,43 +308,10 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12008143
 <h2 id="京都大学国際高等教育院附属データ科学イノベーション教育研究センター-2020-11-30-top"><strike>京都大学・国際高等教育院附属データ科学イノベーション教育研究センター</strike> (2020-11-30) <span id="55c82ddb17"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="金沢大学先端科学社会共創推進機構-2020-11-30-top"><strike>金沢大学・先端科学・社会共創推進機構</strike> (2020-11-30) <span id="3e8e47f219"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="金沢大学先端科学社会共創推進機構人材育成グループ-2020-11-30-top"><strike>金沢大学・先端科学・社会共創推進機構・人材育成グループ</strike> (2020-11-30) <span id="ba663a9993"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="信州大学.通信システム分野-2020-11-30-top">信州大学.通信システム分野 (2020-11-30) <span id="409791d615"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 34<br />
-id : D120091018 [UPDATE]<br />
-update : 2020年09月18日<br />
-univ : 信州大学.通信システム分野<br />
-title : 助教の公募(電子情報システム工学科通信システム分野)<br />
-field : 工学 - 通信工学 情報学 - 情報通信システム<br />
-post : 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091018&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091018&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="長岡技術科学大学情報経営システム工学-2020-11-30-top">長岡技術科学大学・情報・経営システム工学 (2020-11-30) <span id="718bc1a3d7"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 18<br />
-id : D120091301 [UPDATE]<br />
-update : 2020年09月30日<br />
-univ : 長岡技術科学大学・情報・経営システム工学<br />
-title : 情報・経営システム工学専攻　ヒューマン情報学講座，または，ソーシャル情報システム学講座　准教授<br />
-field : 情報学 - 情報学基礎 情報学 - 計算基盤 情報学 - 人間情報学<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091301&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091301&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="信州大学.通信システム分野助教-2020-11-30-top"><strike>信州大学.通信システム分野(助教)</strike> (2020-11-30) <span id="6b485e1aec"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="長岡技術科学大学情報経営システム工学better.at.1204-2020-11-30-top"><strike>長岡技術科学大学・情報・経営システム工学(better.at.1204)</strike> (2020-11-30) <span id="f6c3f2851b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京大学人間エネルギー環境学分野-2020-11-30-top"><strike>東京大学・人間エネルギー環境学分野</strike> (2020-11-30) <span id="8a765a3a6e"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="名古屋商科大学情報-2020-11-30-top">名古屋商科大学・情報 (2020-11-30) <span id="8ba5fdc674"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 53<br />
-id : D120101256 [NEW]<br />
-update : 2020年10月21日<br />
-univ : 名古屋商科大学・情報<br />
-title : 専任教員の公募（情報）<br />
-field : 情報学 - 全て 社会科学 - 全て<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120101256&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120101256&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="名古屋商科大学情報nolab-2020-11-30-top"><strike>名古屋商科大学・情報(nolab)</strike> (2020-11-30) <span id="de05684f07"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京工業大学ソフトウェア工学分野-2020-12-01-top">東京工業大学・ソフトウェア工学分野 (2020-12-01) <span id="2035b98127"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 26<br />
 id : D120100073 [NEW]<br />
